implements pages